# pantrace

./: .bumpversion.cfg  .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  flake.nix  rustfmt.toml
.github/workflows/: build.yml  tests.yml
data/: atlas_29792007.jsonl  iris.jsonl  trace.warts
src/: atlas.rs  convertable.rs  format.rs  formats.rs  internal.rs  iris-to-warts-trace.rs.old  iris.rs  iris_atlas.rs  iris_warts_trace.rs  lib.rs  main.rs  scamper_trace_warts.rs  traits.rs  utils.rs  warts.rs  warts_trace.rs
src/atlas/: from.rs  from_internal.rs  mod.rs  models.rs  reader.rs  to.rs  to_internal.rs  writer.rs
src/formats/: atlas.rs  flat.rs  internal.rs
src/formats/atlas/: from_internal.rs  models.rs  reader.rs  to_internal.rs  writer.rs
src/formats/flat/: from_internal.rs  models.rs  writer.rs
src/formats/internal/: models.rs  reader.rs  writer.rs
src/formats/iris/: from_internal.rs  models.rs  reader.rs  to_internal.rs  writer.rs
src/formats/scamper_trace_warts/: from_internal.rs  models.rs  reader.rs  to_internal.rs  writer.rs
src/internal/: mod.rs  models.rs  reader.rs  writer.rs
src/iris/: from.rs  from_internal.rs  mod.rs  models.rs  reader.rs  to.rs  to_internal.rs  writer.rs
src/scamper_trace_warts/: from_internal.rs  reader.rs  to_internal.rs  writer.rs
src/warts/: from.rs  mod.rs  reader.rs  to.rs
src/warts_trace/: from.rs  from_internal.rs  mod.rs  models.rs  reader.rs  to.rs  to_internal.rs  writer.rs
tests/: roundtrip_test.rs  test_reader.rs  test_roundtrip.rs
